# Agentic_Research_Assistant_-ARA-

./: pyproject.toml  template.py
data/: README.md  production-ai-project-roadmap.md
data/docs/: FastAPI_Complete_Guide.md  I've spent the last few days trying.txt
src/agents/: critic.py  graph.py  hitl.py  researcher.py  state.py
src/core/: config.py  llm.py
src/mcp/: client.py  server.py
src/observability/: logging_config.py
src/rag/: ingest.py  retriever.py  vectorstore.py
