[project]
name = "agentic-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "pathlib>=1.0.1",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
]
